# grpc-poc

./: .gitignore  Cargo.toml  README.md  pyproject.toml
proto/: hello.proto
src/: main.py  main.rs
