[project]
name = "poc-grpc"
version = "0.1.0"
description = ""
authors = [
    {name = "Ihor Palii",email = "palii.ihor@uvik.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio (>=1.73.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.73.0"

